--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
+    "cors": "^2.8.4",
     "express": "^4.15.3",
     "morgan": "^1.8.2"
   },
